# automation-builder

./: AGENTS.md  CONTRIBUTING.md  README.md  browser_connector.py  drive_chat.py  llm_chat.py  pyproject.toml
.cursor/rules/: forgeai.mdc
.forgeai/: config.md
.github/: AGENTS.md
examples/: error_handling_agent.py  github_repo_creator_agent.py  llm_browser_agent.py  select_dropdowns.py
scripts/: setup_github_hf_repo.py  setup_github_repo_step_by_step.py
