[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-builder"
version = "0.2.0"
description = "LLM-powered browser automation via real logged-in Chrome (CDP + glowing panda + keyboard control)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Automation Builder Contributors"}
]
dependencies = [
    "playwright>=1.44",
    "requests",
]

[project.optional-dependencies]
dev = ["ruff", "black"]

[project.scripts]
automation-chat = "llm_chat:main"
automation-builder = "browser_connector:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/kwizzlesurp10-ctrl/automation-builder"
Repository = "https://github.com/kwizzlesurp10-ctrl/automation-builder"